--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
 language: node_js
 node_js:
   - "8"
+dist: trusty # needs Ubuntu Trusty
+sudo: false  # no need for virtualization.
+addons:
+  chrome: stable # have Travis install chrome stable.
+before_script: # https://github.com/travis-ci/travis-ci/issues/9024#issuecomment-356282802
+    - "sudo chown root /opt/google/chrome/chrome-sandbox"
+    - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
+cache:
+  npm: true
+  directories:
+    - node_modules
+install:
+  - npm install
+script:
+  - npm test
