--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "get-svg-colors",
-  "version": "1.4.0",
+  "name": "get-svg-colors-browser",
+  "version": "0.0.0",
   "description": "Extract stroke and fill colors from SVG files",
-  "repository": "github:zeke/get-svg-colors",
-  "main": "index.js",
+  "repository": "https://github.com/snorpey/get-svg-colors-browser.git",
+  "main": "dist/get-svg-colors.js",
+  "browser": "dist/get-svg-colors-browser.js",
+  "module": "dist/get-svg-colors-browser.es.js",
+  "jspm": {
+    "main": "dist/get-svg-colors-browser.es.js"
+  },
   "scripts": {
-    "test": "mocha"
+    "prepublish": "npm run build && npm run test",
+    "test": "karma start --single-run --browsers ChromeHeadless test/browser.karma.conf.js --lib=get-svg-colors-browser.js",
+    "build": "node build.js && node build.js -e && node build.js -m && node build.js -em"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cheerio": "^0.19.0",
-    "chroma-js": "^1.1.1",
-    "is-svg": "^1.1.1",
-    "lodash.compact": "^3.0.0",
-    "lodash.uniq": "^3.2.2"
+  "author": {
+    "name": "Georg Fischer",
+    "email": "hi@snorpey.com",
+    "url": "http://snorpey.com/"
   },
+  "license": "MIT",
+  "dependencies": {},
   "devDependencies": {
-    "mocha": "^2.3.3"
+    "chai": "^4.1.2",
+    "commander": "^2.15.1",
+    "extract-comments": "^1.0.0",
+    "karma": "^2.0.2",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^2.3.3",
+    "rollup": "^0.58.1",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-cleanup": "^2.0.1",
+    "rollup-plugin-license": "^0.6.0",
+    "uglify-es": "^3.3.9",
+    "uglify-js": "^3.3.22"
   }
 }
