--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "chai": "^4.2.0",
     "commander": "^5.0.0",
     "extract-comments": "^1.1.0",
-    "karma": "^5.0.0",
+    "karma": "^6.3.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^2.0.0",
-    "mocha": "^7.0.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-cleanup": "^2.0.1",
-    "rollup-plugin-license": "^0.13.0",
+    "karma-mocha": "^2.0.1",
+    "mocha": "^8.4.0",
+    "rollup": "^2.47.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "rollup-plugin-cleanup": "^3.2.1",
+    "rollup-plugin-license": "^2.3.0",
     "uglify-es": "^3.3.9",
     "uglify-js": "^3.9.1"
   }
